// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the H3 component should accept additional props 1`] = `
<Text
  accessible={false}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#222222",
      },
      Object {},
    ]
  }
>
  "What you are is God's gift to you, what you become is your gift to God." ― Hans Urs von Balthasar
</Text>
`;

exports[`the H3 component should accept and render passed in styles 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#222222",
      },
      Object {
        "color": "salmon",
      },
    ]
  }
>
  Salmon text
</Text>
`;

exports[`the H3 component should render correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#222222",
      },
      Object {},
    ]
  }
>
  Default H3 text
</Text>
`;
